crates/modor/tests/compilation/compile_fail/singleton_with_system_as_self_action.rs
extern crate modor;

use modor::*;

struct Entity;

#[singleton]
//~^ error: overflow evaluating the requirement `DependsOn<Entity>: Sized`
impl Entity {
    #[run_as(Self)]
    fn f() {}
}

fn main() {}
